# fuel-price-optimizer

./: Dockerfile  README.md  install_uv.sh  pyproject.toml
.github/workflows/: ci.yml
src/fuel_price_optimizer/: config.py  features.py  main.py  model.py  optimizer.py  pipeline.py  summary.py
