[project]
name = "fuel-price-optimizer"
version = "0.1.0"
description = "ML system for daily fuel price optimization using RandomForest + feature pipeline."
readme = "README.md"
requires-python = ">=3.10"

# All dependencies your script needs
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "reportlab>=4.0",
    "fpdf>=1.7",
]

[tool.uv]
# uv project metadata
package = true
dev-dependencies = [
    "jupyter",
    "ipykernel",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
